[gd_scene load_steps=10 format=2]

[ext_resource path="res://ships/brain.gd" type="Script" id=1]
[ext_resource path="res://guns/bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://ships/movement_visualizer.gd" type="Script" id=3]
[ext_resource path="res://assets/ships/playerShip3_blue.png" type="Texture2D" id=4]
[ext_resource path="res://ships/NPC_ship.gd" type="Script" id=5]
[ext_resource path="res://assets/shield_Edit.png" type="Texture2D" id=6]
[ext_resource path="res://assets/fire11_grayscale_edit.png" type="Texture2D" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 23.0021

[sub_resource type="ParticleProcessMaterial" id=2]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
initial_velocity = 0.13
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_random = 0.3
color = Color( 0.0117647, 0.996078, 0.972549, 1 )

[node name="Node2D" type="Node2D"]
z_as_relative = false

[node name="Area2D_ship_f" type="Area2D" parent="."]
script = ExtResource( 5 )
bullet = ExtResource( 2 )
kind_id = 1

[node name="playerShip3_blue" type="Sprite2D" parent="Area2D_ship_f"]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_ship_f"]
shape = SubResource( 1 )

[node name="bullet_container" type="Node" parent="Area2D_ship_f"]

[node name="muzzle" type="Marker2D" parent="Area2D_ship_f"]
position = Vector2( 0, -30 )

[node name="gun_timer" type="Timer" parent="Area2D_ship_f"]
wait_time = 0.5
one_shot = true

[node name="shield_effect" type="Sprite2D" parent="Area2D_ship_f"]
visible = false
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 6 )

[node name="shield_timer" type="Timer" parent="Area2D_ship_f"]
wait_time = 0.5

[node name="brain" type="Node2D" parent="Area2D_ship_f"]
script = ExtResource( 1 )

[node name="vis" type="Node2D" parent="Area2D_ship_f"]
script = ExtResource( 3 )

[node name="task_timer" type="Timer" parent="Area2D_ship_f"]
wait_time = 2.0

[node name="recharge_timer" type="Timer" parent="Area2D_ship_f"]
process_mode = 0

[node name="shield_recharge_timer" type="Timer" parent="Area2D_ship_f"]
process_mode = 0
autostart = true

[node name="engine_flare" type="GPUParticles2D" parent="Area2D_ship_f"]
position = Vector2( 0, 34 )
scale = Vector2( 0.5, 1 )
amount = 2
lifetime = 0.3
process_material = SubResource( 2 )
texture = ExtResource( 7 )

[node name="dock" type="Marker2D" parent="Area2D_ship_f"]
position = Vector2( 0, 23 )

[node name="Label" type="Label" parent="Area2D_ship_f"]
offset_top = 40.0
offset_right = 38.0
offset_bottom = 54.0
text = "Name"

[node name="warp_correct_timer" type="Timer" parent="Area2D_ship_f"]

[connection signal="input_event" from="Area2D_ship_f" to="Area2D_ship_f" method="_on_Area2D_input_event"]
[connection signal="timeout" from="Area2D_ship_f/shield_timer" to="Area2D_ship_f" method="_on_shield_timer_timeout"]
[connection signal="timeout" from="Area2D_ship_f/task_timer" to="Area2D_ship_f" method="_on_task_timer_timeout"]
[connection signal="timeout" from="Area2D_ship_f/shield_recharge_timer" to="Area2D_ship_f" method="_on_shield_recharge_timer_timeout"]
[connection signal="timeout" from="Area2D_ship_f/warp_correct_timer" to="Area2D_ship_f" method="_on_warp_correct_timer_timeout"]
